[manual]统一遍历Person方式到PersonCache